# jobapply

./: .gitignore  README.md  app.py  db.py  models.py  profile.json  pyproject.toml  settings.py
docs/: sources.md
docs/changelog/: change_1.md  change_2.md  change_3.md
routes/: apply.py  home.py  profile.py  vacancies.py
screenshots/: .placeholder  README.md
scripts/: fetch_all.py  fetch_sber.py  probe_sber.py
services/: applier.py  cache.py  habr.py  hh.py  mistral.py  sber.py  sources.py
tests/: conftest.py  test_models.py  test_routes.py  test_services.py
web/static/css/: main.css
web/static/js/: three-bg.js
web/templates/: _vacancy_list.html  apply_preview.html  base.html  home.html  profile.html  vacancies.html
