[project]
name = "jobapply"
version = "0.1.0"
description = "Автоотклики на ML/DS-стажировки"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "httpx>=0.27",
  "pydantic>=2.9",
  "python-multipart>=0.0.12",
  "python-dotenv>=1.0",
  "sqlmodel>=0.0.22",
  "aiosqlite>=0.20",
  "mistralai>=1.2",
]
